--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "react-mobx-realworld-example-app",
+  "name": "lit-mobx-realworld-example-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://react-mobx.realworld.io",
   "license": "MIT",
   "devDependencies": {
-    "custom-react-scripts": "0.2.0",
-    "gh-pages": "^1.0.0"
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "gh-pages": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.41.2",
+    "webpack-nano": "^0.8.1"
   },
   "dependencies": {
+    "@adobe/lit-mobx": "^0.0.2",
+    "@stencil/router": "^1.0.1",
     "history": "4.7.2",
+    "lit-element": "^2.2.1",
     "marked": "^0.3.6",
     "mobx": "^3.2.2",
-    "mobx-react": "^4.2.2",
     "promise.prototype.finally": "^3.0.0",
-    "prop-types": "^15.5.10",
     "query-string": "5.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router-dom": "4.2.2",
     "superagent": "^3.6.0",
-    "superagent-promise": "^1.1.0"
+    "superagent-promise": "^1.1.0",
+    "wc-context": "^0.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "wp --mode development",
+    "prod": "wp --mode production"
   }
 }
