--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@babel/core": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "babel-loader": "^8.0.6",
     "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.2",
-    "webpack-nano": "^0.8.1"
+    "webpack-nano": "^0.8.1",
+    "webpack-plugin-serve": "^0.12.1"
   },
   "dependencies": {
     "@adobe/lit-mobx": "^0.0.2",
