--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-nano": "^0.8.1",
     "webpack-plugin-serve": "^0.12.1"
   },
