--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "babel-loader": "^8.0.6",
     "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "source-map-explorer": "^2.1.2",
     "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-nano": "^0.8.1",
-    "webpack-plugin-serve": "^0.12.1"
+    "webpack-plugin-serve": "^0.12.1",
+    "webpack-stats-plugin": "^0.3.0"
   },
   "dependencies": {
     "@adobe/lit-mobx": "^0.0.2",
@@ -32,6 +33,6 @@
   },
   "scripts": {
     "dev": "wp --mode development",
-    "prod": "wp --mode production"
+    "prod": "wp --mode production && source-map-explorer dist/main.js --html dist/bundle-size.html"
   }
 }
