--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^8.0.6",
     "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.19.1",
     "source-map-explorer": "^2.1.2",
     "webpack": "^4.41.2",
     "webpack-nano": "^0.8.1",
@@ -33,6 +34,7 @@
   },
   "scripts": {
     "dev": "wp --mode development",
-    "prod": "wp --mode production && source-map-explorer dist/main.js --html dist/bundle-size.html"
+    "prod": "wp --mode production && source-map-explorer dist/main.js --html dist/bundle-size.html",
+    "prettier": "prettier src/**/*.js --write"
   }
 }
