--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@open-wc/testing": "^2.4.2",
+    "@open-wc/testing-karma": "^3.2.15",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-commonjs": "^1.1.6",
+    "deepmerge": "^4.2.2",
     "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "karma": "^4.4.1",
+    "lit-html": "^1.1.2",
     "prettier": "^1.19.1",
     "source-map-explorer": "^2.1.2",
     "webpack": "^4.41.2",
@@ -28,13 +34,17 @@
     "mobx": "^5.15.0",
     "promise-prototype-finally": "^1.0.0",
     "query-string": "5.0.0",
-    "superagent": "^3.6.0",
+    "superagent": "^5.1.2",
     "superagent-promise": "^1.1.0",
-    "wc-context": "^0.8.0"
+    "wc-context": "^0.9.0"
   },
   "scripts": {
     "dev": "wp --mode development",
     "prod": "wp --mode production && source-map-explorer dist/main.js --html dist/bundle-size.html",
-    "prettier": "prettier src/**/*.js --write"
+    "prettier": "prettier src/**/*.js --write",
+    "test": "karma start --coverage",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:update-snapshots": "karma start --update-snapshots",
+    "test:prune-snapshots": "karma start --prune-snapshots"
   }
 }
