--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-commonjs": "^1.1.6",
     "deepmerge": "^4.2.2",
-    "gh-pages": "^1.0.0",
+    "gh-pages": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "karma": "^4.4.1",
     "lit-html": "^1.1.2",
@@ -39,6 +39,7 @@
     "wc-context": "^0.9.0"
   },
   "scripts": {
+    "deploy": "gh-pages --dist dist",
     "dev": "wp --mode development",
     "prod": "wp --mode production && source-map-explorer dist/main.js --html dist/bundle-size.html",
     "prettier": "prettier src/**/*.js --write",
