--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/preset-env": "^7.7.7",
     "@open-wc/testing": "^2.4.2",
-    "@open-wc/testing-karma": "^3.2.21",
+    "@open-wc/testing-karma": "3.2.17",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-commonjs": "^1.1.6",
     "deepmerge": "^4.2.2",
@@ -28,12 +28,11 @@
   },
   "dependencies": {
     "@adobe/lit-mobx": "^0.0.2",
-    "@stencil/router": "^1.0.1",
     "lit-element": "^2.2.1",
     "marked": "^0.8.0",
     "mobx": "^5.15.1",
     "promise-prototype-finally": "^1.0.0",
-    "query-string": "6.9.0",
+    "slick-router": "^2.3.0",
     "superagent": "^5.1.3",
     "wc-context": "^0.9.0"
   },
